# ultimate-trading-skills

./: .env.example  .gitignore  CLAUDE.md  CONCEPTS_REFERENCES.md  DEPLOYMENT.md  PORTING_PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
data/: _audit.py  _audit2.py  breadth.py  dump_index_catalog.py  index_catalog.md  index_targets.toml  nse_constituents.py  sector_strategy.toml  sources.py
data/constituents/: Auto.csv  Energy.csv  FMCG.csv  Financial Services.csv  IT.csv  Infra.csv  Metal.csv  PSU Bank.csv  Pharma.csv  Private Bank.csv  README.md  Realty.csv
data/corporate_actions/: CANBK_NSE.json
data/events/: policy.csv
engines/backtesting/: SKILL.md
engines/backtesting/references/: advanced-framework.md  costs-slippage.md  multi-asset.md  performance-analysis.md  strategy-patterns.md  vectorbt-basics.md  walk-forward.md
engines/openalgo-data/: README.md
engines/quant-models/: SKILL.md
engines/quant-models/references/: factor-models.md  feature-engineering.md  kalman-filter.md  mean-reversion.md  portfolio-optimization.md  regime-detection.md  risk-metrics.md  volatility-models.md
engines/statistical-analysis/: SKILL.md
engines/statistical-analysis/scripts/: assumption_checks.py
engines/yfinance/: SKILL.md
engines/yfinance/references/: advanced.md  fundamentals.md  indian-markets.md  market-data.md  options.md
framework/: batch.py  calibrate.py  charts.py  config.py  data_api.py  dependency_graph.py  fetch.py  flow_classifier.py  harness.py  india_sectors.py  indicators.py  interfaces.py  local_model.py  registry.py  sector_params.py  universe.py  viz.py
framework/dependency_providers/: __init__.py  india.py  us.py  us_private.py
framework/strategies/: __init__.py  bnf_flow_reversion.py  bnf_reversion.py  nulls.py
manuals/: 01-why-edge-exists.md  02-price-volume-and-order-flow.md  03-mean-reversion.md  04-momentum-trend.md  05-setup-quality-vcp.md  06-regime-detection.md  07-bubbles-lppl.md  08-factor-models.md  09-optimization-gradient-descent.md  10-backtesting-discipline.md  11-risk-position-sizing.md  12-analysis-mode-topdown-bottomup.md  README.md
reports/: psu_bank_deep_dive_2026-06-06.md
reports/research/PSU-Bank_2026-06-06/: 00_comprehensive.md  00_industry.md  01_observations.md  BANKBARODA_equity_research.md  BANKINDIA_equity_research.md  CANBK_equity_research.md  GLOSSARY.md  INDIANB_equity_research.md  IOB_equity_research.md  MAHABANK_equity_research.md  PNB_equity_research.md  SBIN_equity_research.md  UCOBANK_equity_research.md  UNIONBANK_equity_research.md  _annual_reports.py  _assemble.py  _composition_charts.py  _concall_stt.py  _concalls.py  _depgraph.py  _gather.py  _graph.py  _ratings.py  _regather_panels.py  _strategies.py  references.md
runs/20260606_031139/: bob_concall_may2026.json  bob_screener.json  canbk_concall.json  canbk_screener.json  pnb_concall.json  pnb_screener.json  rbi_table16.xlsx  sbin_ar_2025.json  sbin_screener.json
runs/20260606_031139/scripts/: concall_reader.py  india_sectors.py  influence_graph.py  pdf_to_md.py  (+2 more)
strategies/: mean_reversion_bnf.py
tools/: build_pages.py
(+183 files in other folders)
