[project]
name = "ultimate-trading-skills"
version = "0.1.0"
description = "Systematic trading research for Indian markets (NSE/BSE)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
# Data sources — audited one at a time. Kept optional so the core framework
# installs without dragging in flaky India-market scrapers.
data = [
    "jugaad-data",   # FREE bulk NSE/BSE historical bhavcopy — primary backtest source
    "nsepython",     # NSE official endpoints (indices, option chain, FII/DII)
    "yfinance",      # fallback OHLCV
    "mftool",        # AMFI mutual-fund NAV history (scheme performance)
    "niftystocks",   # live NSE sectoral index constituents
]
backtest = [
    "vectorbt",
]

[tool.uv]
# nothing yet

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework", "data", "strategies"]
