[project]
name = "ultimate-trading-skills"
version = "0.1.0"
description = "Systematic trading research for Indian markets (NSE/BSE)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",   # single config seam (framework/config.py); enforced via ensure_env()
]

[project.optional-dependencies]
# Data sources — audited one at a time. Kept optional so the core framework
# installs without dragging in flaky India-market scrapers.
data = [
    "jugaad-data",   # FREE bulk NSE/BSE historical bhavcopy — primary per-stock source
    "nselib",        # NSE archive: index OHLC+turnover (primary index source; bypasses Akamai)
    "nsepython",     # NSE official endpoints (FII/DII, index name list)
    "yfinance",      # fallback OHLCV
    "mftool",        # AMFI mutual-fund NAV history (scheme performance)
    "niftystocks",   # live NSE sectoral index constituents
    "openpyxl",      # XLSX engine for xlsx_reader (RBI Sectoral Deployment tables)
    "tabulate",      # markdown table rendering for xlsx_reader output
]
backtest = [
    "vectorbt",
]
# Headless-browser fallback for sites that intermittently block plain requests
# (niftyindices constituent CSVs). Primary path is requests+cookie-warmup; this is
# only the fallback. Requires `playwright install chromium` after pip install.
scrape = [
    "playwright",
]
# News collection — RSS for recent items (india-news-tracker). Historical/point-in-time
# news uses date-scoped WebSearch (agentic, no dep), verified viable.
news = [
    "feedparser",
]
# Optional local-model fallback for the technical-analyst vision skill, via langchain
# (provider-agnostic — Ollama now, swappable later). Validated with qwen2.5vl. Config-gated by
# .env (LOCAL_VISION_*). Pillow preps/downscales the image.
local = [
    "langchain-ollama",
    "pillow",
]

[tool.uv]
# nothing yet

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework", "data", "strategies"]
